# reedy

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  afk-ralph.sh  context.md  prd.md  progress.txt  ralph-once.sh  release-local.yml  setup-github-token.sh  test-release.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml  rust.yml
scripts/: ci-prep.sh
src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  rss_manager.rs  ui.rs
tests/: app_tests.rs  ui_tests.rs
