[package]
name = "reedy"
version = "0.1.5"
authors = ["Ryan Spears <73195765+dorryspears@users.noreply.github.com>"]
license = "MIT"
edition = "2021"
description = "A terminal-based RSS reader with a clean TUI interface"
repository = "https://github.com/dorryspears/reedy"
homepage = "https://github.com/dorryspears/reedy"
readme = "README.md"
keywords = ["rss", "terminal", "tui", "reader", "feed"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "reedy"
path = "src/lib.rs"

[[bin]]
name = "reedy"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
rss = "2.0"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
open = "5.3"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15.0"
html2text = "0.12"
chrono = "0.4.39"
base64 = "0.22.1"
atom_syndication = "0.12.6"
arboard = { version = "3", default-features = false }
quick-xml = "0.37"
notify-rust = "4.11"
